--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.5",
     "postcss-import": "^12.0.0",
@@ -45,6 +46,7 @@
     "postcss-preset-env": "^6.3.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.23.0",
     "terser-webpack-plugin": "^1.2.3",
