--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
-    "node-sass": "^4.12.0",
+    "node-sass": "4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.5",
     "postcss-import": "^12.0.0",
@@ -49,8 +49,8 @@
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.23.0",
-    "terser-webpack-plugin": "^1.2.3",
-    "webpack": "^4.20.2",
+    "terser-webpack-plugin": "2.3.5",
+    "webpack": "4.42.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.11"
   }
